--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,45 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.form-div-mobile{
+  margin: 2vw 5vw;
+  /* max-width: 900px;   */
+}
+
+.form-person{
+  border: 2px solid rgb(98, 89, 182);
+  border-radius: 15px;
+  margin-bottom: 1em;
+  padding: 1em 2em;
+}
+
+.center-text{
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.full-width {
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-group-text {
+  flex-shrink: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.flex-grow-1 {
+  flex-grow: 1;
 }
 
-.card {
-  padding: 2em;
+.center-all{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
-.read-the-docs {
-  color: #888;
+.floating-text-top {
+  margin-top: -1.5em; /* Moves the text 10 pixels upwards */
+  /* background-color: red; */
+}
+
+.clear-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
